# TypingDefense-Strukdata-Algoritma

./: .gitignore  CMakeLists.txt  README.md  desktop.ini  main.cpp
data/: data.json
ext/raylib/: raylib.h
include/: .ninja_deps  .ninja_log  Assets.h  Asteroid.h  AsteroidManager.h  Background.h  CMakeCache.txt  Combostack.h  Credit.h  DifficultyManager.h  Game.h  GameConfig.h  GameOver.h  GameplayManager.h  Leaderboard.h  MainMenu.h  Pause.h  ScoreManager.h  SpaceShip.h  State.h  WordGenerator.h  build.ninja  cmake_install.cmake
src/: Asteroid.cpp  AsteroidManager.cpp  Background.cpp  ComboStack.cpp  Credit.cpp  DifficultyManager.cpp  Game.cpp  GameOver.cpp  GameplayManager.cpp  Leaderboard.cpp  MainMenu.cpp  Pause.cpp  SpaceShip.cpp  WordGenerator.cpp  main.cpp
